skywalking/adapter-bundle.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: skywalking-custom-metrics-system
---
apiVersion: v1
kind: Service
metadata:
  name: skywalking-custom-metrics-apiserver
  namespace: skywalking-custom-metrics-system
spec:
  ports:
  - name: https
    port: 443
    targetPort: 6443
  selector:
    app: custom-metrics-apiserver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: custom-metrics-apiserver
  name: skywalking-custom-metrics-apiserver
  namespace: skywalking-custom-metrics-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: custom-metrics-apiserver
  template:
    metadata:
      labels:
        app: custom-metrics-apiserver
      name: custom-metrics-apiserver
    spec:
      containers:
      - args:
        - --secure-port=6443
        - --logtostderr=true
        - --v=10
        - --oap-addr=http://skywalking-oap.skywalking:12800/graphql
        - --cert-dir=/tmp
        command:
        - /adapter
        image: apache/skywalking-swck:v0.6.1
        imagePullPolicy: IfNotPresent
        name: adapter
        ports:
        - containerPort: 6443
          name: https
        volumeMounts:
        - mountPath: /tmp
          name: temp-vol
      serviceAccountName: skywalking-custom-metrics-apiserver
      volumes:
      - emptyDir: {}
        name: temp-vol
